php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #75720 File cache not populated after SHM runs full
Submitted: 2017-12-21 21:47 UTC Modified: -
From: nikic@php.net Assigned:
Status: Closed Package: opcache
PHP Version: 7.2.0 OS:
Private report: No CVE-ID: None
 [2017-12-21 21:47 UTC] nikic@php.net
Description:
------------
Originally reported in bug #75579: If file cache is enabled as secondary cache and SHM runs full, we stop writing to the file cache as well.

We should still write to the file cache in this case -- in fact this is specifically one of the cases where having it in the file cache would be particularly beneficial.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2017-12-22 09:40 UTC] post at minhost dot no
I agree about this, and just wanted to remind about the setting "opcache.max_accelerated_files" (http://php.net/manual/en/opcache.configuration.php) wich has a maximum value of 1000000 - I am not certain if that value also come into force on file cache on disk, but if it does, it might be a idea to also remove that limit for file cache on disk.
 [2017-12-28 11:10 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=60b2d67828185940b80e7923f0766fa22e6d5daa
Log: Fixed bug #75720 (File cache not populated after SHM runs full)
 [2017-12-28 11:10 UTC] dmitry@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 03:00:01 2026 UTC