Fixed bug #75720 (File cache not populated after SHM runs full)